welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: type mismatch;
 found   : Int(110)
 required: Boolean
  if (90<Math.abs(100-n)<110 || 190<Math.abs(200-n)<210) {
                         ^nearHundred:2: error: type mismatch;
 found   : Int(210)
 required: Boolean
  if (90<Math.abs(100-n)<110 || 190<Math.abs(200-n)<210) {
                                                    ^